@@ -18,7 +18,7 @@
 <idea-plugin version="2" url="http://www.ansorg-it.com/en/products_bashsupport.html">
     <name>BashSupport</name>
     <category>Custom Languages</category>
-    <version>0.9.22</version>
+    <version>0.9.23</version>
     <vendor url="http://www.ansorg-it.com/"
             email="mail@ansorg-it.com"
             logo="resources/icons/bash-16.png">Joachim Ansorg
@@ -39,6 +39,11 @@
 
     <change-notes><![CDATA[
     <html>
+       <b>Changes in version 0.9.23:</b>
+       <ul>
+        <li>Fixed exception which occurred when editing external files</li>
+       </ul>
+
        <b>Changes in version 0.9.22:</b>
        <ul>
         <li>Restored documentation lookup for internal and external commands</li>
